@startuml


Balance-right.>CoinFactory
Balance-->Coin
Balance..>Price
CoinFactory-down.>Coin
Coin-->Price


class Balance {
    Coin[] mUseCoinList
    addUseCoin(String coinCode);
    setPriceTable(ArrayList<Price>price);
    getKrw();
    getCoinValue(String coinCode);
    getCoinToKrw(String coinCode);
}

class CoinFactory {
    return Coin[];
}



Class Coin {
    CoinType mCoinType

    float mSellPrice
    float mBuyPrice

    void setCoinValue(float coinValue)
    void setBuyPrice(float buyPrice)
    void setSellPrice(float sellPrice)

    float getBuyKrw()
    float getSellKrw()

    String getCoinName()
}



class Price {
    float mCost
    float getKrw(float coin)
    float getCoin(float krw)
}



@enduml